<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_user_list_title"
        android:text="@string/nearUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_select_user_list"/>

    <ListView
            android:id="@+id/main_select_user_list"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_user_list_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/status_title"/>

    <TextView
            android:text="@string/disconnected"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/main_enter_zone"
            android:textColor="@color/colorDisconnected"
            android:id="@+id/status_title"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/main_select_user_list" android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"/>

    <Button
            android:id="@+id/main_enter_zone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/enterZone"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/status_title"
            app:layout_constraintBottom_toTopOf="@+id/main_refresh_user_list"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    <Button
            android:text="@string/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_enter_zone"
            android:id="@+id/main_refresh_user_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>


</android.support.constraint.ConstraintLayout>